src/test/ui/span/destructor-restrictions.stderr
error[E0597]: `*a` does not live long enough
  --> $DIR/destructor-restrictions.rs:18:10
   |
18 |         *a.borrow() + 1
   |          ^ borrowed value does not live long enough
19 |     }; //~^ ERROR `*a` does not live long enough
   |     -- borrowed value needs to live until here
   |     |
   |     `*a` dropped here while still borrowed

error: aborting due to previous error

